2005-09-04  Derek Price  <derek@ximbiot.com>

	Add canon-host module from GNULIB.
	* canon-host.c: New file.

	Update from GNULIB.
	* Makefile.am: Import modifications from...
	* Makefile.gnulib: ...here.
	* dup-safer.c, fd-safer.c, getpass.c, regcomp.c, regex.c, regex.h,
	regex_internal.c, regex_internal.h, regexec.c, strcase.h,
	strcasecmp.c, strftime.c, strncasecmp.c, strstr.c, strstr.h,
	unistd-safer.h: Updated.
	* mbchar.c, mbchar.h, mbuiter.h, memchr.c, pipe-safer.c, strnlen1.c,
	strnlen1.h, unistd--.h: New files.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* getdelim.c (getdelim): Return EOF on EOF, revisited.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* getdelim.c (getdelim): Return EOF on EOF.

2005-08-12  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* Makefile.am: Update using Makefile.gnulib changes.
	* Makefile.gnulib, dup-safer.c, dup2.c, fnmatch.c, getcwd.c, getcwd.h,
	getline.c, getline.h, getlogin_r.h, mktime.c, openat.h,
	pagealign_alloc.c, quotearg.c, regex.c, regex.h, save-cwd.c,
	strftime.c, tempname.c, time_r.h, xmalloc.c: Updated.
	* getdelim.c, getdelim.h, regcomp.c, regex_internal.c,
	regex_internal.h, regexec.c, size_max.h: New files.

2005-06-12  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add files "filenamecat.h" and "lstat.c" to project.
	* libcvs.dep, libcvs.mak: Regenerate for "libcvs.dsp" changes.

2005-06-10  Derek Price  <derek@ximbiot.com>

	Sync with GNULIB.
	* basename.c, canonicalize.c, canonicalize.h, dirname.c, dirname.h,
	fnmatch_.h, fnmatch_loop.c, getcwd.c, getlogin_r.c, mkstemp.c,
	openat.c, openat.h, pathmax.h, rename.c, stripslash.c, tempname.c,
	xreadlink.c: Update from GNULIB.
	* path-concat.c, path-concat.h: Rename to...
	* filenamecat.c, filenamecat.h: ...this.

	Test new stat module.
	* lstat.h: New file.
	* stat.c: Remove this file and...
	* lstat.c: ...move most functionality here.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add file "windows-NT/woe32.h" to project.